Fixed layout on small screens

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,3 +7,9 @@
     border: 1px solid #d0d4dc;
     border-radius: 3px;
 }
+
+@media screen and (max-width: 650px) {
+    .wrapper {
+        margin: 15px;
+    }
+}
