--- a/src/components/ui/navigation/navigation.css
+++ b/src/components/ui/navigation/navigation.css
@@ -5,7 +5,6 @@
     flex-wrap: nowrap;
     border-bottom: 1px solid #d0d4dc;
     border-top: 1px solid #d0d4dc;
-    border-radius: 3px 3px 0 0;
     margin: 10px -15px 20px -15px;
 }
 
